# ComfyUI-sam-audio

./: README.md  nodes.py  pyproject.toml  requirements.txt  torchcodec_shim.py
.github/workflows/: publish.yml
examples/: span_separation_workflow.json  text_separation_workflow.json  visual_separation_workflow.json
sam_audio/: __init__.py  processor.py
sam_audio/model/: __init__.py  align.py  codec.py  config.py  judge.py  model.py  patcher.py  rope.py  text_encoder.py  transformer.py  vision_encoder.py
sam_audio/ranking/: __init__.py  clap.py  imagebind.py  judge.py  ranker.py  sound_activity.py
